<resources>
    <string name="app_name">OralHealth</string>
    <string name="title_activity_splash_screen">Oral Health Splash Screen</string>
    <string name="splash_description">Oral Health Game</string>
    <string name="about_button">Sobre</string>
	<string name="about">
		Oral health é jogo sério (<i>serious game</i>) voltado para educação em saúde bucal.
		Envolve a participação e interação de crianças e pais através de atividades interativas.
		Traz como propósito ser um instrumento de apoio para construção do hábito e da técnica de
        escovação.
		O jogo promove também adoção de hábitos alimentares saudáveis, dicas das trocas da dentição
        decídua para permanente, lembretes de troca de escova e de visita ao dentista ambientado em
        um contexto lúdico, desafiador e imersivo.
	</string>

    <!-- Global Strings -->
    <string name="game_name">Oral Health</string>
    <string name="exit_game">Você REALMENTE deseja sair do jogo?</string>

    <!-- Menu Items -->
    <string name="start_game">Jogar</string>

    <!-- Start options -->
    <string name="choose_area">Escolha sua área</string>
    <string name="option_father">Pai</string>
    <string name="option_son">Filho</string>

    <string name="gender_male">Menino</string>
    <string name="gender_female">Menina</string>
    <string name="choose_avatar">Escolher</string>

    <!-- Father Menu -->
    <string name="monitoring_menu">Monitoria</string>
    <string name="tutorial_menu">Tutorial</string>
    <string name="know_more_menu">Saiba +</string>

    <!-- Tutorial Text -->
    <string name="tutorial_partA">
        Olá! Seja bem vindo ao Oral Health. Este é um aplicativo com um propósito educativo.
        É muito comum as pessoas saberem o que fazer. Não é verdade? A questão é a prática,
        ou seja, sabemos o que precisamos fazer, entretanto não fazemos.
        Com a higiene bucal ocorre isso também. Sabemos que precisamos escovar os dentes
        após as refeições. Mas muitas vezes não fazemos. Foi pensando nisso que esse
        aplicativo foi desenvolvido. Faça bom proveito. Divirta-se. Cuidar bem é uma
        demonstração de amor. E amar é o melhor caminho para educar.
    </string>
    <string name="tutorial_partB">
        Prezado pai/cuidador/responsável, para que este aplicativo atinja seu maior propósito,
        que é EDUCAR, é importante sua participação e solicitamos sua atenção as seguintes
        intruções:
    </string>
    <string name="tutorial_partC">
        1) Didaticamente, a boca pode ser dividida em 4 partes, chamadas de quadrantes: quandrante
        superior direito, quandrante superior esquerdo, quandrante inferior direito e quandrante
        inferior esquerdo. Todos os quadrantes precisam ser escovados.
    </string>
    <string name="tutorial_partD">
        2) Didaticamente, os dentes possuem as seguintes faces: no caso dos dentes anteriores,
        encontramos a da frente e a de tras. No caso dos dentes posteriores, temos a face mastigatória
        (de cima), a face da bochecha e a da língua. Todas as faces precisam ser escovadas. Todos
        os lados dos dentes precisam ser escovados.
    </string>
    <string name="tutorial_partE">
        3) O tempo de escovação varia de acordo com a fase em que sua criança se encontra. Ao iniciar
        a escovação, um cronômetro é acionado no seu telefone e um sinal sonoro é emitido quando o
        tempo estiver encerrado. O tempo precisa ser cumprido.
    </string>
    <string name="tutorial_partF">
        4) Sua participação, incentivo e exemplo são essenciais para que a sua criança crie hábitos
        saudáveis de higiene bucal. Lembre que a auto-estima de sua criança está em processo de
        formação, por isso, sua colaboração é necessária. Ter dentes saudáveis e bonitos fazem a sua
        criança ter auto-estima, crescer segura e estabelecer relações sociais saudáveis.
    </string>
    <string name="tutorial_partG">
        5) A criança precisa ser educada em disciplina para seguir regras e condutas de convívio
        familiar e social. Essa disciplina é importante para formação do caráter e da cidadania.
        Ajude sua criança nesse processo.
    </string>
    <string name="tutorial_partH">
        6) Lembre-se sempre: o maior exemplo para sua criança é você. Crianças observam os pais e
        aprendem com seus comportamentos, gestos, palavras, tom de voz e exemplo. Seja o melhor de
        "<b>GENTE DO BEM</b>" que sua criança pode ter!
    </string>
    <string name="tutorial_partI">
        7) Acreditamos no seu compromisso com a criação de sua criança. Acreditamos na sua
        sinceridade e espontaneidade em querer o que é melhor para sua criança. Queremos servir de
        apoio e motivação para que esses propósitos sejam alcançados. Acreditamos na sua capacidade
        e, por isso, colocamo-nos a disposição para dialogos, quando necessarias. Email:
        laila1alessia2@hotmail.com
    </string>

    <string name="tip_phase_2">
        FASE 2
        Nesta fase a criança realizará os mesmos movimentos de escovação que na FASE 1.
        O tempo também é o mesmo. O Diagrama de Cores indica os quadrantes que precisam
        ser escovados. É só seguir a sequência que está em destaque. Boa sorte! Divirta-se!
    </string>
    <string name="tip_phase_3">
        FASE 3
        Nesta fase o tempo de escovação é de 40 segundos. Mas não se preocupe.
        O aplicativo emitirá um sinal sonoro quando for o tempo de terminar.
        Esteja atento ao Diagrama de Cores.
    </string>
    <string name="tip_phase_4">
        FASE 4
        Nesta fase o tempo de escovação é de 01 minuto. Mas não se preocupe.
        O aplicativo emitirá um sinal sonoro quando for o tempo de terminar.
        Esteja atento ao Diagrama de Cores.
    </string>

    <string name="know_more_content_A">
        CÁRIE DENTÁRIA \n
        É uma doença transmissível. Vários fatores podem causar a cárie dentária.
        Entre eles: fatores hereditários, higiene inadequada, excesso de consumo de alimentos doces.
        A cárie dentária pode ser prevenida. Para isso, visite o dentista regularmente, mantenha uma
        boa higiene bucal e evite excesso de alimentos açucarados. \n
        1/4
    </string>
    <string name="know_more_content_B">
        DENTIÇÃO MISTA \n
        Os dentes de leite são substituídos pelos dentes permanentes. Geralmente essa mudança ocorre
        aos 6 anos. Mas podemos ter um variação de 6 meses aproximadamente. Então a queda dos dentes
        de leite pode iniciar aos 5 anos e meio ou pode iniciar aos 6 anos e meio. Os dentes de
        leite são substituídos aos poucos. Nessa fase, a criança está com dentes de leite e dentes
        permanentes. É por isso que essa fase é chamada de DENTIÇÃO MISTA. Na imagem a seguir, você
        saberá a idade aproximada da queda dos dentes de leite. \n
        2/4
    </string>
    <string name="know_more_content_C">
        ALIMENTAÇÃO SAUDÁVEL \n
        Procure consumir mais frutas, verduras e legumes. Eles ajudam a manter os dentes limpos por
        serem alimentos ricos em fibras. Ajudam também no crescimento e fortalecimento de ossos e
        dentes. Evite alimentos industrializados. Geralmente eles possuem excesso de açúcares e
        gorduras. Comer é muito bom, não é mesmo!? E sabemos que, em tudo na vida, o equilíbrio
        é importante. Todo excesso pode ser prejudicial. Por isso, seja equilibrado quando o assunto
        é alimentação saudável. \n
        3/4
    </string>
    <string name="know_more_content_D">
        REGRA DOS DOCES \n
        Você já sabe que, em tudo na vida, o equilíbrio é importante e que todo excesso pode ser
        prejudicial. Na infância, um dos alimentos que mais são consumidos pelas crianças são os
        doces. Nas suas mais diversas apresentações: recheados, sorvetes, bombons, chicletes e por
        aí vai. Você também já sabe que esses alimentos são prejudiciais para os dentes. Foi
        pensando nisso, que sugerimos a REGRA DOS DOCES. É assim: procure consumir doces e
        guloseimas somente nas festas ou em datas comemorativas. Exemplos: aniversário de
        coleguinhas, familiares, Páscoa, Dia das Crianças, festividades na Escola, Natal. Siga essa
        regra. Você verá os resultados maravilhosos na saúde bucal de sua criança. Lembre sempre
        disto: cuidar é uma forma de amar, e amar é a melhor forma de educar. \n
        4/4
    </string>

    <string name="back_button"><![CDATA[<<]]></string>
    <string name="advanced_button"><![CDATA[>>]]></string>
    <string name="tips_menu">Dicas</string>
    <string name="field_cpf">Informe seu CPF</string>
    <string name="son_permission_denied">Você só pode jogar depois que seu responsável efetuar o cadastro.</string>
    <string name="father_permission_denied">Você só pode usar esta opção depois que seu filho efetuar o cadastro.</string>
    <string name="not_enough_phase">Você só pode usar esta opção depois que seu filho avançar de fase.</string>
    <string name="required_cpf">Informe seu CPF.</string>
    <string name="person_name">SEU NOME</string>

    <string name="error_name">Informe um nome!</string>
    <string name="error_gender">Informe um genero!</string>
</resources>
