<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_menu"
    android:duration="@android:integer/config_shortAnimTime"
    android:windowEnterTransition="@android:transition/slide_right"
    tools:context="br.com.virgiliorximenes.oralhealth.FatherActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/logo_margin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/game_name"
        android:gravity="center"
        android:paddingBottom="@dimen/logo_margin"
        android:scaleType="fitXY"
        android:src="@drawable/oral_health_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tutorial_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/button_shape"
            android:clickable="true"
            android:text="@string/tutorial_menu"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_menu"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/know_more_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/button_shape"
            android:clickable="true"
            android:text="@string/know_more_menu"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_menu"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>
